// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect props options options are objects should correctly render text of options 1`] = `
<div class="field is-horizontal has-addons v-radio">
    <!---->
    <div class="control">
        <label for="[object Object]" class="button is-multiline">

            <!---->
        </label>
        <input id="[object Object]" type="radio" name="" value="">
    </div>
    <div class="control">
        <label for="[object Object]" class="button is-multiline">

            <!---->
        </label>
        <input id="[object Object]" type="radio" name="" value="">
    </div>
    <!---->
</div>
`;

exports[`VSelect props options options are objects should correctly render values of options 1`] = `
<div class="field is-horizontal has-addons v-radio">
    <!---->
    <div class="control">
        <label for="val" class="button is-multiline">

            <!---->
        </label>
        <input id="val" type="radio" name="" value="val">
    </div>
    <div class="control">
        <label for="[object Object]" class="button is-multiline">

            <!---->
        </label>
        <input id="[object Object]" type="radio" name="" value="">
    </div>
    <!---->
</div>
`;

exports[`VSelect props options options are strings should correctly render options 1`] = `
<div class="field is-horizontal has-addons v-radio">
    <!---->
    <div class="control">
        <label for="option1" class="button is-multiline">
            option1
            <!---->
        </label>
        <input id="option1" type="radio" name="" value="option1">
    </div>
    <div class="control">
        <label for="option2" class="button is-multiline">
            option2
            <!---->
        </label>
        <input id="option2" type="radio" name="" value="option2">
    </div>
    <!---->
</div>
`;

exports[`VSelect props options options have different types should correctly render options 1`] = `
<div class="field is-horizontal has-addons v-radio">
    <!---->
    <div class="control">
        <label for="option" class="button is-multiline">
            option
            <!---->
        </label>
        <input id="option" type="radio" name="" value="option">
    </div>
    <div class="control">
        <label for="option value" class="button is-multiline">

            <!---->
        </label>
        <input id="option value" type="radio" name="" value="option value">
    </div>
    <!---->
</div>
`;
